--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -63,7 +63,8 @@ required = [
 [[constraint]]
   name = "github.com/operator-framework/operator-sdk"
   # The version rule is used for a specific release and the master branch for in between releases.
-  revision = "99ae4aed7387dcfdc07ecf6169cf35b7bca47924"
+  # branch = "master" #osdk_branch_annotation
+  version = "=v0.6.0" #osdk_version_annotation
 
 [prune]
   go-tests = true
@@ -90,6 +91,3 @@ required = [
 [[override]]
   name = "github.com/3scale/3scale-porta-go-client"
   branch = "master"
-
-
-
