--- a/pkg/3scale/amp/auto-generated-templates/productized_templates/amp/amp-eval-s3.yml
+++ b/pkg/3scale/amp/auto-generated-templates/productized_templates/amp/amp-eval-s3.yml
@@ -1609,11 +1609,6 @@ objects:
                 secretKeyRef:
                   key: SECRET_KEY_BASE
                   name: system-app
-            - name: REDIS_URL
-              valueFrom:
-                secretKeyRef:
-                  key: URL
-                  name: system-redis
             - name: MEMCACHE_SERVERS
               valueFrom:
                 secretKeyRef:
@@ -1624,6 +1619,26 @@ objects:
                 secretKeyRef:
                   key: REDIS_STORAGE_URL
                   name: backend-redis
+            - name: REDIS_URL
+              valueFrom:
+                secretKeyRef:
+                  key: URL
+                  name: system-redis
+            - name: MESSAGE_BUS_REDIS_URL
+              valueFrom:
+                secretKeyRef:
+                  key: MESSAGE_BUS_URL
+                  name: system-redis
+            - name: REDIS_NAMESPACE
+              valueFrom:
+                secretKeyRef:
+                  key: NAMESPACE
+                  name: system-redis
+            - name: MESSAGE_BUS_REDIS_NAMESPACE
+              valueFrom:
+                secretKeyRef:
+                  key: MESSAGE_BUS_NAMESPACE
+                  name: system-redis
             - name: APICAST_BACKEND_ROOT_ENDPOINT
               valueFrom:
                 secretKeyRef:
@@ -1863,11 +1878,6 @@ objects:
               secretKeyRef:
                 key: SECRET_KEY_BASE
                 name: system-app
-          - name: REDIS_URL
-            valueFrom:
-              secretKeyRef:
-                key: URL
-                name: system-redis
           - name: MEMCACHE_SERVERS
             valueFrom:
               secretKeyRef:
@@ -1878,6 +1888,26 @@ objects:
               secretKeyRef:
                 key: REDIS_STORAGE_URL
                 name: backend-redis
+          - name: REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: URL
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_URL
+                name: system-redis
+          - name: REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: NAMESPACE
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_NAMESPACE
+                name: system-redis
           - name: APICAST_BACKEND_ROOT_ENDPOINT
             valueFrom:
               secretKeyRef:
@@ -2133,11 +2163,6 @@ objects:
               secretKeyRef:
                 key: SECRET_KEY_BASE
                 name: system-app
-          - name: REDIS_URL
-            valueFrom:
-              secretKeyRef:
-                key: URL
-                name: system-redis
           - name: MEMCACHE_SERVERS
             valueFrom:
               secretKeyRef:
@@ -2148,6 +2173,26 @@ objects:
               secretKeyRef:
                 key: REDIS_STORAGE_URL
                 name: backend-redis
+          - name: REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: URL
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_URL
+                name: system-redis
+          - name: REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: NAMESPACE
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_NAMESPACE
+                name: system-redis
           - name: APICAST_BACKEND_ROOT_ENDPOINT
             valueFrom:
               secretKeyRef:
@@ -2402,11 +2447,6 @@ objects:
               secretKeyRef:
                 key: SECRET_KEY_BASE
                 name: system-app
-          - name: REDIS_URL
-            valueFrom:
-              secretKeyRef:
-                key: URL
-                name: system-redis
           - name: MEMCACHE_SERVERS
             valueFrom:
               secretKeyRef:
@@ -2417,6 +2457,26 @@ objects:
               secretKeyRef:
                 key: REDIS_STORAGE_URL
                 name: backend-redis
+          - name: REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: URL
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_URL
+                name: system-redis
+          - name: REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: NAMESPACE
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_NAMESPACE
+                name: system-redis
           - name: APICAST_BACKEND_ROOT_ENDPOINT
             valueFrom:
               secretKeyRef:
@@ -2729,11 +2789,6 @@ objects:
               secretKeyRef:
                 key: SECRET_KEY_BASE
                 name: system-app
-          - name: REDIS_URL
-            valueFrom:
-              secretKeyRef:
-                key: URL
-                name: system-redis
           - name: MEMCACHE_SERVERS
             valueFrom:
               secretKeyRef:
@@ -2744,6 +2799,26 @@ objects:
               secretKeyRef:
                 key: REDIS_STORAGE_URL
                 name: backend-redis
+          - name: REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: URL
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_URL
+                name: system-redis
+          - name: REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: NAMESPACE
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_NAMESPACE
+                name: system-redis
           - name: APICAST_BACKEND_ROOT_ENDPOINT
             valueFrom:
               secretKeyRef:
@@ -2858,6 +2933,21 @@ objects:
               secretKeyRef:
                 key: URL
                 name: system-redis
+          - name: MESSAGE_BUS_REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_URL
+                name: system-redis
+          - name: REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: NAMESPACE
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_NAMESPACE
+                name: system-redis
           image: amp-system:latest
           name: check-svc
           resources: {}
@@ -2950,6 +3040,26 @@ objects:
             value: "5"
           - name: FULL_REINDEX_INTERVAL
             value: "60"
+          - name: REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: URL
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_URL
+                name: system-redis
+          - name: REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: NAMESPACE
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_NAMESPACE
+                name: system-redis
           image: amp-system:latest
           imagePullPolicy: IfNotPresent
           livenessProbe:
@@ -3017,7 +3127,10 @@ objects:
       threescale_component: system
     name: system-redis
   stringData:
-    URL: redis://system-redis:6379/1
+    MESSAGE_BUS_NAMESPACE: ${SYSTEM_MESSAGE_BUS_REDIS_NAMESPACE}
+    MESSAGE_BUS_URL: ${SYSTEM_MESSAGE_BUS_REDIS_URL}
+    NAMESPACE: ${SYSTEM_REDIS_NAMESPACE}
+    URL: ${SYSTEM_REDIS_URL}
   type: Opaque
 - apiVersion: v1
   kind: Secret
@@ -3901,6 +4014,20 @@ parameters:
   name: RECAPTCHA_PUBLIC_KEY
 - description: reCAPTCHA secret key (used in spam protection)
   name: RECAPTCHA_PRIVATE_KEY
+- description: Define the external system-redis to connect to
+  name: SYSTEM_REDIS_URL
+  required: true
+  value: redis://system-redis:6379/1
+- description: Define the external system-redis message bus to connect to
+  name: SYSTEM_MESSAGE_BUS_REDIS_URL
+  required: true
+  value: redis://system-redis:6379/8
+- description: Define the namespace to be used by System's Redis Database. The empty
+    value means not namespaced
+  name: SYSTEM_REDIS_NAMESPACE
+- description: Define the namespace to be used by System's Message Bus Redis Database.
+    The empty value means not namespaced
+  name: SYSTEM_MESSAGE_BUS_REDIS_NAMESPACE
 - description: Password for the PostgreSQL connection user.
   displayName: PostgreSQL Connection Password
   from: '[a-zA-Z0-9]{16}'
