--- a/pkg/3scale/amp/auto-generated-templates/productized_templates/amp/amp-eval.yml
+++ b/pkg/3scale/amp/auto-generated-templates/productized_templates/amp/amp-eval.yml
@@ -1623,11 +1623,6 @@ objects:
                 secretKeyRef:
                   key: SECRET_KEY_BASE
                   name: system-app
-            - name: REDIS_URL
-              valueFrom:
-                secretKeyRef:
-                  key: URL
-                  name: system-redis
             - name: MEMCACHE_SERVERS
               valueFrom:
                 secretKeyRef:
@@ -1638,6 +1633,26 @@ objects:
                 secretKeyRef:
                   key: REDIS_STORAGE_URL
                   name: backend-redis
+            - name: REDIS_URL
+              valueFrom:
+                secretKeyRef:
+                  key: URL
+                  name: system-redis
+            - name: MESSAGE_BUS_REDIS_URL
+              valueFrom:
+                secretKeyRef:
+                  key: MESSAGE_BUS_URL
+                  name: system-redis
+            - name: REDIS_NAMESPACE
+              valueFrom:
+                secretKeyRef:
+                  key: NAMESPACE
+                  name: system-redis
+            - name: MESSAGE_BUS_REDIS_NAMESPACE
+              valueFrom:
+                secretKeyRef:
+                  key: MESSAGE_BUS_NAMESPACE
+                  name: system-redis
             - name: APICAST_BACKEND_ROOT_ENDPOINT
               valueFrom:
                 secretKeyRef:
@@ -1854,11 +1869,6 @@ objects:
               secretKeyRef:
                 key: SECRET_KEY_BASE
                 name: system-app
-          - name: REDIS_URL
-            valueFrom:
-              secretKeyRef:
-                key: URL
-                name: system-redis
           - name: MEMCACHE_SERVERS
             valueFrom:
               secretKeyRef:
@@ -1869,6 +1879,26 @@ objects:
               secretKeyRef:
                 key: REDIS_STORAGE_URL
                 name: backend-redis
+          - name: REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: URL
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_URL
+                name: system-redis
+          - name: REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: NAMESPACE
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_NAMESPACE
+                name: system-redis
           - name: APICAST_BACKEND_ROOT_ENDPOINT
             valueFrom:
               secretKeyRef:
@@ -2101,11 +2131,6 @@ objects:
               secretKeyRef:
                 key: SECRET_KEY_BASE
                 name: system-app
-          - name: REDIS_URL
-            valueFrom:
-              secretKeyRef:
-                key: URL
-                name: system-redis
           - name: MEMCACHE_SERVERS
             valueFrom:
               secretKeyRef:
@@ -2116,6 +2141,26 @@ objects:
               secretKeyRef:
                 key: REDIS_STORAGE_URL
                 name: backend-redis
+          - name: REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: URL
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_URL
+                name: system-redis
+          - name: REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: NAMESPACE
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_NAMESPACE
+                name: system-redis
           - name: APICAST_BACKEND_ROOT_ENDPOINT
             valueFrom:
               secretKeyRef:
@@ -2347,11 +2392,6 @@ objects:
               secretKeyRef:
                 key: SECRET_KEY_BASE
                 name: system-app
-          - name: REDIS_URL
-            valueFrom:
-              secretKeyRef:
-                key: URL
-                name: system-redis
           - name: MEMCACHE_SERVERS
             valueFrom:
               secretKeyRef:
@@ -2362,6 +2402,26 @@ objects:
               secretKeyRef:
                 key: REDIS_STORAGE_URL
                 name: backend-redis
+          - name: REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: URL
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_URL
+                name: system-redis
+          - name: REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: NAMESPACE
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_NAMESPACE
+                name: system-redis
           - name: APICAST_BACKEND_ROOT_ENDPOINT
             valueFrom:
               secretKeyRef:
@@ -2655,11 +2715,6 @@ objects:
               secretKeyRef:
                 key: SECRET_KEY_BASE
                 name: system-app
-          - name: REDIS_URL
-            valueFrom:
-              secretKeyRef:
-                key: URL
-                name: system-redis
           - name: MEMCACHE_SERVERS
             valueFrom:
               secretKeyRef:
@@ -2670,6 +2725,26 @@ objects:
               secretKeyRef:
                 key: REDIS_STORAGE_URL
                 name: backend-redis
+          - name: REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: URL
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_URL
+                name: system-redis
+          - name: REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: NAMESPACE
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_NAMESPACE
+                name: system-redis
           - name: APICAST_BACKEND_ROOT_ENDPOINT
             valueFrom:
               secretKeyRef:
@@ -2760,6 +2835,21 @@ objects:
             valueFrom:
               secretKeyRef:
                 key: URL
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_URL
+                name: system-redis
+          - name: REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: NAMESPACE
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_NAMESPACE
                 name: system-redis
           image: amp-system:latest
           name: check-svc
@@ -2856,6 +2946,26 @@ objects:
             value: "5"
           - name: FULL_REINDEX_INTERVAL
             value: "60"
+          - name: REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: URL
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_URL
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_URL
+                name: system-redis
+          - name: REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: NAMESPACE
+                name: system-redis
+          - name: MESSAGE_BUS_REDIS_NAMESPACE
+            valueFrom:
+              secretKeyRef:
+                key: MESSAGE_BUS_NAMESPACE
+                name: system-redis
           image: amp-system:latest
           imagePullPolicy: IfNotPresent
           livenessProbe:
@@ -2923,7 +3033,10 @@ objects:
       threescale_component: system
     name: system-redis
   stringData:
-    URL: redis://system-redis:6379/1
+    MESSAGE_BUS_NAMESPACE: ${SYSTEM_MESSAGE_BUS_REDIS_NAMESPACE}
+    MESSAGE_BUS_URL: ${SYSTEM_MESSAGE_BUS_REDIS_URL}
+    NAMESPACE: ${SYSTEM_REDIS_NAMESPACE}
+    URL: ${SYSTEM_REDIS_URL}
   type: Opaque
 - apiVersion: v1
   kind: Secret
@@ -3801,6 +3914,20 @@ parameters:
   name: RECAPTCHA_PUBLIC_KEY
 - description: reCAPTCHA secret key (used in spam protection)
   name: RECAPTCHA_PRIVATE_KEY
+- description: Define the external system-redis to connect to
+  name: SYSTEM_REDIS_URL
+  required: true
+  value: redis://system-redis:6379/1
+- description: Define the external system-redis message bus to connect to
+  name: SYSTEM_MESSAGE_BUS_REDIS_URL
+  required: true
+  value: redis://system-redis:6379/8
+- description: Define the namespace to be used by System's Redis Database. The empty
+    value means not namespaced
+  name: SYSTEM_REDIS_NAMESPACE
+- description: Define the namespace to be used by System's Message Bus Redis Database.
+    The empty value means not namespaced
+  name: SYSTEM_MESSAGE_BUS_REDIS_NAMESPACE
 - description: Password for the PostgreSQL connection user.
   displayName: PostgreSQL Connection Password
   from: '[a-zA-Z0-9]{16}'
