--- a/pkg/3scale/amp/auto-generated-templates/amp/amp-s3.yml
+++ b/pkg/3scale/amp/auto-generated-templates/amp/amp-s3.yml
@@ -3931,15 +3931,15 @@ parameters:
 - description: Postgresql image to use
   name: POSTGRESQL_IMAGE
   required: true
-  value: registry.access.redhat.com/rhscl/postgresql-10-rhel7
+  value: docker.io/centos/postgresql-10-centos7
 - description: Mysql image to use
   name: MYSQL_IMAGE
   required: true
-  value: registry.access.redhat.com/rhscl/mysql-57-rhel7:5.7
+  value: docker.io/centos/mysql-57-rhel7:5.7
 - description: Memcached image to use
   name: MEMCACHED_IMAGE
   required: true
-  value: registry.access.redhat.com/3scale-amp20/memcached
+  value: docker.io/library/memcached
 - description: Set to true if the server may bypass certificate verification or connect
     directly over HTTP during image import.
   name: IMAGESTREAM_TAG_IMPORT_INSECURE
@@ -3948,7 +3948,7 @@ parameters:
 - description: Redis image to use
   name: REDIS_IMAGE
   required: true
-  value: registry.access.redhat.com/rhscl/redis-32-rhel7:3.2
+  value: docker.io/centos/redis-32-centos7:3.2
 - description: Username for MySQL user that will be used for accessing the database.
   displayName: MySQL User
   name: MYSQL_USER
