--- a/pkg/3scale/amp/auto-generated-templates/productized_templates/amp/amp-ha.yml
+++ b/pkg/3scale/amp/auto-generated-templates/productized_templates/amp/amp-ha.yml
@@ -3334,27 +3334,27 @@ parameters:
   value: "null"
 - name: AMP_BACKEND_IMAGE
   required: true
-  value: registry.access.redhat.com/3scale-amp25/backend
+  value: quay.io/3scale/apisonator:nightly
 - name: AMP_ZYNC_IMAGE
   required: true
-  value: registry.access.redhat.com/3scale-amp25/zync
+  value: quay.io/3scale/zync:nightly
 - name: AMP_APICAST_IMAGE
   required: true
-  value: registry.access.redhat.com/3scale-amp25/apicast-gateway
+  value: quay.io/3scale/apicast:nightly
 - name: AMP_ROUTER_IMAGE
   required: true
-  value: registry.access.redhat.com/3scale-amp22/wildcard-router
+  value: quay.io/3scale/wildcard-router:nightly
 - name: AMP_SYSTEM_IMAGE
   required: true
-  value: registry.access.redhat.com/3scale-amp25/system
+  value: quay.io/3scale/porta:nightly
 - description: Postgresql image to use
   name: POSTGRESQL_IMAGE
   required: true
-  value: registry.access.redhat.com/rhscl/postgresql-10-rhel7
+  value: docker.io/centos/postgresql-10-centos7
 - description: Memcached image to use
   name: MEMCACHED_IMAGE
   required: true
-  value: registry.access.redhat.com/3scale-amp20/memcached
+  value: docker.io/library/memcached
 - description: Set to true if the server may bypass certificate verification or connect
     directly over HTTP during image import.
   name: IMAGESTREAM_TAG_IMPORT_INSECURE
