--- a/pkg/3scale/amp/auto-generated-templates/productized_templates/amp/amp.yml
+++ b/pkg/3scale/amp/auto-generated-templates/productized_templates/amp/amp.yml
@@ -3797,31 +3797,31 @@ parameters:
   value: "null"
 - name: AMP_BACKEND_IMAGE
   required: true
-  value: registry.access.redhat.com/3scale-amp25/backend
+  value: quay.io/3scale/apisonator:nightly
 - name: AMP_ZYNC_IMAGE
   required: true
-  value: registry.access.redhat.com/3scale-amp25/zync
+  value: quay.io/3scale/zync:nightly
 - name: AMP_APICAST_IMAGE
   required: true
-  value: registry.access.redhat.com/3scale-amp25/apicast-gateway
+  value: quay.io/3scale/apicast:nightly
 - name: AMP_ROUTER_IMAGE
   required: true
-  value: registry.access.redhat.com/3scale-amp22/wildcard-router
+  value: quay.io/3scale/wildcard-router:nightly
 - name: AMP_SYSTEM_IMAGE
   required: true
-  value: registry.access.redhat.com/3scale-amp25/system
+  value: quay.io/3scale/porta:nightly
 - description: Postgresql image to use
   name: POSTGRESQL_IMAGE
   required: true
-  value: registry.access.redhat.com/rhscl/postgresql-10-rhel7
+  value: docker.io/centos/postgresql-10-centos7
 - description: Mysql image to use
   name: MYSQL_IMAGE
   required: true
-  value: registry.access.redhat.com/rhscl/mysql-57-rhel7:5.7
+  value: docker.io/centos/mysql-57-rhel7:5.7
 - description: Memcached image to use
   name: MEMCACHED_IMAGE
   required: true
-  value: registry.access.redhat.com/3scale-amp20/memcached
+  value: docker.io/library/memcached
 - description: Set to true if the server may bypass certificate verification or connect
     directly over HTTP during image import.
   name: IMAGESTREAM_TAG_IMPORT_INSECURE
@@ -3830,7 +3830,7 @@ parameters:
 - description: Redis image to use
   name: REDIS_IMAGE
   required: true
-  value: registry.access.redhat.com/rhscl/redis-32-rhel7:3.2
+  value: docker.io/centos/redis-32-centos7:3.2
 - description: Username for MySQL user that will be used for accessing the database.
   displayName: MySQL User
   name: MYSQL_USER
