--- a/pkg/3scale/amp/manual-templates/productized-templates/apicast-gateway/apicast.yml
+++ b/pkg/3scale/amp/manual-templates/productized-templates/apicast-gateway/apicast.yml
@@ -121,7 +121,7 @@ parameters:
   value: "2.5.0"
   required: true
 - name: AMP_APICAST_IMAGE
-  value: "registry.access.redhat.com/3scale-amp25/apicast-gateway"
+  value: "quay.io/3scale/apicast:nightly"
   required: true
 - description: "Name of the secret containing the THREESCALE_PORTAL_ENDPOINT with the access-token or provider key"
   value: apicast-configuration-url-secret
